# RemoteControl

./: .gitignore  README.md
Control_demo/: Main.qml  controller.cpp  controller.h  imageprovider.cpp  protocol.cpp  remoteevent.h  socket.cpp  socket.h
Controlled_demo/: CMakeLists.txt  Main.qml  controlled.cpp  controlled.h  inputserver.cpp  inputserver.h  main.cpp  outputserver.cpp  outputserver.h  protocol.cpp  protocol.h  remoteevent.h  socket.cpp  socket.h  systemapi.cpp  systemapi.h  virtualmouse.cpp  virtualmouse.h
Controller_demo/: CMakeLists.txt  Main.qml  MyButton.qml  controller.cpp  controller.h  imageprovider.h  inputclient.cpp  inputclient.h  keythread.cpp  keythread.h  main.cpp  outputclient.cpp  outputclient.h  protocol.cpp  protocol.h  remoteevent.h  resource.qrc  socket.cpp  socket.h
client/: CMakeLists.txt  inputclient.cpp  inputclient.h  main.cpp  outputclient.cpp  outputclient.h  socket.cpp  socket.h
server/: CMakeLists.txt  inputserver.cpp  inputserver.h  main.cpp  outputserver.cpp  outputserver.h  socket.h
